--- a/conf/app.conf
+++ b/conf/app.conf
@@ -7,6 +7,7 @@
 # Example:
 #   `if revel.AppName {...}`
 app.name = amai
+
 module.mymodulename = github.com/revel/modules/orm/gorm 
 db.driver=postgres # mysql, postgres, sqlite3
 db.host=localhost
@@ -14,7 +15,7 @@ db.name=amai_development
 db.user=postgres
 db.password=root
 db.autoinit=true # default=true
-db.singulartable=true
+db.singulartable=true #Set database table names to singular
 
 # A secret string which is passed to cryptographically sign the cookie to prevent
 # (and detect) user modification.
