--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,7 +8,7 @@
 #   `if revel.AppName {...}`
 app.name = amai
 
-module.mymodulename = github.com/revel/modules/orm/gorm 
+module.gorm = github.com/revel/modules/orm/gorm 
 db.driver=postgres # mysql, postgres, sqlite3
 db.host=localhost
 db.name=amai_development
